<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/rtsp_service_button"
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:onClick="startStopRtsp"
        android:text="@string/start_stream_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/start_message_activity_button"
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:onClick="startMessageActivity"
        android:text="@string/message_activity_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rtsp_service_button" />

    <Button
        android:id="@+id/audio_activity_button"
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:onClick="startAudioActivity"
        android:text="@string/audio_activity_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_message_activity_button" />

    <Button
        android:id="@+id/settings_button"
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:onClick="startSettingsActivity"
        android:text="@string/settings_button_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/audio_activity_button" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="103dp"
        android:layout_height="92dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_button"
        app:srcCompat="@drawable/sblogo" />
</androidx.constraintlayout.widget.ConstraintLayout>